fix dark mode

--- a/static/image-compress/app.css
+++ b/static/image-compress/app.css
@@ -1,1 +1,39 @@
-:root{--text:#000000;--bg:#FFFFFF}body{background-color:var(--bg);color:var(--text)}#resultImagePreview,#sourceImagePreview{max-width:100%;height:auto}.mb-2{margin-bottom:10px}@media (max-width:767px){.col-12{padding-left:15px;padding-right:15px}}@media (prefers-color-scheme:dark){:root{--text:#DEFFFFFF;--bg:#121212}}
+:root {
+    --text: #000000;
+    --bg: #FFFFFF;
+}
+
+@media (max-width:767px) {
+    .col-12 {
+        padding-left: 15px;
+        padding-right: 15px
+    }
+}
+
+@media (prefers-color-scheme:dark) {
+    :root {
+        --text: #eee;
+        --bg: #121212;
+    }
+
+    a {
+        color: #809fff;
+    }
+
+    .element {
+        color: var(--bs-primary-text-emphasis);
+        background-color: var(--bs-primary-bg-subtle);
+    }
+
+}
+
+body {
+    background-color: var(--bg);
+    color: var(--text);
+}
+
+#resultImagePreview,
+#sourceImagePreview {
+    max-width: 100%;
+    height: auto
+}
